# GraceKelly

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  answers.md  answers2.md  audit.md  audit1.md  audit2-recommendations.md  audit22.md  audit_codex_2026-04-26.md  audit_opus_2026-04-26.md  claude_new.md  codex_review_2026-04-27.md  docker-compose.yml  gate1-audit-brief.md  pyproject.toml  questions.md
.github/workflows/: ci.yml  docs-site.yml
.workflow/: status.json
.workflow/decisions/: 2026-04-21-diag-orchestrate-500.md
.workflow/docs/: auth-error-codes.md
.workflow/done/: .done  2026-03-29-batch-01.md  2026-03-29-batch-02.md  2026-03-29-batch-03.md  2026-03-29-batch-04.md  2026-04-22-batch-84.md  2026-04-23-batch-101-b.md  2026-04-23-batch-86.md  2026-04-23-batch-87.md  2026-04-23-batch-88.md  2026-04-23-batch-89.md  2026-04-23-batch-90.md  2026-04-23-batch-91.md  2026-04-23-batch-92.md  2026-04-23-batch-93.md  2026-04-23-batch-94.md  2026-04-23-batch-95.md  2026-04-23-batch-96.md  2026-04-23-batch-97.md  2026-04-23-batch-98.md  2026-04-23-batch-99.md  2026-04-25-batch-102.md  2026-04-25-batch-105.md  2026-04-25-batch-106.md  2026-04-25-batch-108.md  2026-04-26-batch-109.md  2026-05-18-perplexity-model-picker-drift.md
.workflow/inbox/: 2026-04-21-AUTH-perplexity-overlay.md
.workflow/outbox/: .done  2026-03-29-batch-01-report.md  2026-03-29-batch-02-report.md  2026-03-29-batch-03-report.md  2026-03-29-batch-04-report.md  2026-04-20-batch-69-DIAG-orchestrate-500-report.md  2026-04-20-batch-69-DIAG-orchestrate-500.result.json  2026-04-20-batch-69-MODEL-dynamic-catalog-report.md  2026-04-20-batch-69-MODEL-dynamic-catalog.result.json  2026-04-20-batch-69-UI1-po2-html-skeleton.result.json  2026-04-20-batch-69-UI2-po2-styles.result.json  2026-04-20-batch-69-UI3-chat-js-features-report.md  2026-04-20-batch-69-UI3-chat-js-features.result.json  2026-04-21-AUTH-AUTH-FIX1-consolidate-codes-report.md  2026-04-21-AUTH-AUTH-FIX1-consolidate-codes.result.json  2026-04-21-AUTH-AUTH-FIX2-ui-banner-test-report.md  2026-04-21-AUTH-AUTH-FIX2-ui-banner-test.result.json  2026-04-21-AUTH-AUTH-FIX3-full-suite-report.md  2026-04-21-AUTH-AUTH-FIX3-full-suite.result.json  2026-04-21-AUTH-AUTH1-route-auth-mapping.result.json  2026-04-21-AUTH-AUTH2-ui-auth-banner.result.json  2026-04-21-batch-70-CLOSE-69-DIAG-decision-report.md  2026-04-21-batch-70-CLOSE-69-DIAG-decision.result.json  2026-04-21-batch-70-CLOSE-69-cleanup-report.md  2026-04-21-batch-70-CLOSE-69-cleanup.result.json  2026-04-21-batch-70-CLOSE-69-commit-report.md  2026-04-21-batch-70-CLOSE-69-commit.result.json  2026-04-21-batch-70-CLOSE-69-json-summaries-report.md  2026-04-21-batch-70-CLOSE-69-json-summaries.result.json  2026-04-21-batch-70-CLOSE-69-scope-reconcile-report.md  2026-04-21-batch-70-CLOSE-69-scope-reconcile.result.json  2026-04-21-batch-72-BOOTSTRAP-onboarding-report.md  2026-04-21-batch-72-BOOTSTRAP-onboarding.result.json  2026-04-21-batch-72-LOGGER-visibility-fix-report.md  2026-04-21-batch-72-LOGGER-visibility-fix.result.json  2026-04-21-batch-72-PROFILE-safety-validator-report.md  2026-04-21-batch-72-PROFILE-safety-validator.result.json  2026-04-21-batch-73-CATALOG-async-lifespan-fix-report.md  2026-04-21-batch-73-CATALOG-async-lifespan-fix.result.json  2026-04-21-batch-73-SMOKE-report.md  (+148 more)
.workflow/scripts/: check-status.js  cx-worker-instruction.md
.workflow/state/: current-plan.md  project-analysis.md
archive/: answers1.md  answers3.md  answers4.md  answers5.md  answers6.md  audit1.md  audit2.md  audit_additional.md
archive/docs/: codex-tasks.md  implementation-plan.md
docs/: architecture.md  codex-tasks.md  gap-analysis-and-roadmap.md  implementation-plan.md  onboarding.md  operator-runbook.md  perplexity-dom-recon.md  phased-roadmap.md  quickstart-ru.md  skills-evaluation.md
docs-site/: .gitignore  astro.config.mjs  openapi.json  package-lock.json  package.json
docs-site/scripts/: check-openapi-fresh.mjs  gen-adapters.mjs  gen-config.mjs  gen-endpoints.mjs  gen-routes.mjs  sync-docs.mjs
docs/audits/: 2026-04-23-post-phase-2-audit.md  2026-04-25-dry-run-gate-audit.md
docs/codex/: 010-embeddings-client.md  (+9 more)
scripts/: bootstrap_chrome_profile.py  dump_openapi.py  ecosystem_smoke.py  live_smart_smoke.py
static/: analytics.html  english.html  index.html  interview.html  rag.html  webpage.html
tests/: conftest.py  test_account_loader.py  test_account_pool.py  test_account_pool_manager.py  test_adaptive_params.py  test_adaptive_selector.py  test_analytics_route.py  test_api_adapter_base_branches.py  test_api_adapter_errors.py  test_api_adapter_execute.py  test_api_adapter_httpx.py  test_api_adapters.py  test_app_startup.py  test_app_state.py  test_backup_profile_tool.py  test_batch_route.py  test_browser_adapter.py  test_browser_policy.py  test_browser_selectors.py  test_capture_perplexity_recon_tool.py  test_circuit_breaker.py  test_circuit_breaker_edge_cases.py  test_cluster_confidence.py  test_clustering_hac.py  test_clustering_properties.py  test_compare_route.py  test_complexity.py  test_concrete_adapters.py  test_concurrency.py  test_confidence.py  test_config.py  test_config_edge_cases.py  test_config_startup_validation.py  test_consensus.py  test_consensus_analyzer.py  test_consensus_edge_cases.py  test_consensus_execution.py  test_consensus_properties.py  test_consensus_route.py  test_consensus_v2.py  (+125 more)
ui/: app.py
(+168 files in other folders)
