[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gracekelly"
version = "0.1.0"
description = "Clean-slate orchestrator for browser-routed LLM execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
gracekelly-create-perplexity-profile = "gracekelly.tools.create_perplexity_profile:main"
gracekelly-capture-perplexity-recon = "gracekelly.tools.capture_perplexity_recon:main"
gracekelly-validate-postgres = "gracekelly.tools.validate_postgres:main"
gracekelly-export-postgres = "gracekelly.tools.export_postgres:main"
gracekelly-import-postgres = "gracekelly.tools.import_postgres:main"
gracekelly-inspect-snapshot = "gracekelly.tools.inspect_snapshot:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]
browser = [
  "playwright>=1.56,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gracekelly = ["storage/migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
norecursedirs = ["tmp", ".pytest_cache"]
