[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gracekelly"
version = "0.1.0"
description = "Clean-slate orchestrator for browser-routed LLM execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0",
]

[project.scripts]
gracekelly-create-perplexity-profile = "gracekelly.tools.create_perplexity_profile:main"
gracekelly-capture-perplexity-recon = "gracekelly.tools.capture_perplexity_recon:main"
gracekelly-validate-postgres = "gracekelly.tools.validate_postgres:main"
gracekelly-export-postgres = "gracekelly.tools.export_postgres:main"
gracekelly-import-postgres = "gracekelly.tools.import_postgres:main"
gracekelly-inspect-snapshot = "gracekelly.tools.inspect_snapshot:main"
gracekelly-migrate-postgres = "gracekelly.tools.migrate_postgres:main"

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100,<7.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.4",
  "mypy>=1.10",
]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
  "psycopg_pool>=3.2,<4.0",
]
browser = [
  "playwright>=1.56,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gracekelly = ["storage/migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
norecursedirs = ["tmp", ".pytest_cache", ".hypothesis", "docs"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
  "src/gracekelly/adapters/browser/playwright_driver.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  "@abstractmethod",
]

[[tool.mypy.overrides]]
module = "gracekelly.storage.postgres"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
